<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">哪错了？</string>
    <string name="title_activity_main">哪错了？</string>
    <string name="menu_settings">设置</string>
    <string name="menu_search">搜索</string>
    <string name="menu_exit">退出</string>
    <string name="drawer_open">打开导航面板</string>
    <string name="drawer_close">关闭导航面板</string>
    <string name="drawer_title">想做什么？</string>

    <string-array name="drawer_items">
        <item>首页</item>
        <item>全部题目</item>
        <item>Sample Page 0</item>
        <item>Sample Page 1</item>
        <item>Sample Page 2</item>
    </string-array>
    <!-- 版权信息 -->
    <string name="copy_right">哪错了？\n版本:Rolling Stone pre-ɑ\n2013 PaperAirplane Dev Team</string>
    <!-- 欢迎界面 -->
    <string name="welcome">欢迎使用</string>
    <string name="welcome_content">欢迎使用哪错了。\n哪错了能帮助您在Android手机和平板电脑上管理您的错题、难题；\n同时能帮助您进行错题测验。</string>
    <string name="hint_text">从最左拖动拉出菜单</string>
    <!-- 题目列表 -->
    <string name="add_mistake">添加错题</string>
    <string name="card_description" formatted="false">%d道错题</string>
    <string name="card_description_for_subject" formatted="false">%d道错题，%d个科目</string>
    <string name="no_category_hint_title">这里似乎有些空虚……</string>
    <string name="no_subject_hint">点击下方的“添加错题”按钮以添加错题</string>
    <string name="no_tag_hint">编辑错题以添加标签</string>
    <!-- Tabs -->
    <string name="tag">标签</string>
    <string name="subject_or_grade">年级/科目</string>
    <!-- 添加错题界面 -->
    <string name="tv_grade">年级: </string>
    <string name="tv_subject">科目: </string>
    <string name="tv_type">题目类型：</string>
    <string name="hint_title">标题</string>
    <string name="hint_description">问题描述</string>
    <string name="hint_answer">问题答案</string>
    <string name="add_subject_hint">科目名称</string>
    <string name="add_subject_empty">科目名称不能为空</string>
    <string name="add_subject_title">添加科目</string>
    <string name="add_tag_hint">标签名称</string>
    <string name="add_tag_empty">标签名称不能为空</string>
    <string name="add_tag_title">添加标签</string>
    <string name="add_grade_hint">年级名称</string>
    <string name="add_grade_empty">年级名称不能为空</string>
    <string name="add_grade_title">添加年级</string>
    <string name="field_empty" formatted="false">%s不能为空</string>
    <string name="add_mistake_succeed">添加成功!</string>
    <!-- 菜单项 -->
    <string name="action_add_photo">添加图片</string>
    <string name="action_add_tag">添加标签</string>
    <string name="action_cancel">取消</string>
    <string name="action_next">下一步</string>
    <string name="action_prev">上一步</string>
    <string name="action_finish">完成</string>
    <string name="action_search">搜索</string>
    <!-- 题目类型 -->
    <string-array name="types">
        <item>选择题</item>
        <item>填空题</item>
        <item>判断题</item>
    </string-array>

    <string name="selection_not_enough">请添加更多选项</string>
    <string name="add_selection">添加选项</string>
    <string name="add_selection_hint">选项</string>
    <string name="add_selection_empty">选项不能为空</string>
    <!-- 判断题 -->
    <string name="jud_true">正确</string>
    <string name="jud_false">错误</string>
    <!-- steps -->
    <string name="step_1">步骤 1/2</string>
    <string name="step_2">步骤 2/2</string>
    <!-- Spinner -->
    <string name="spinner_default">请选择</string>
    <string name="add_category">添加……</string>
    <!-- Add photo -->
    <string name="photo_pick">选择图片</string>
    <string name="photo_capture">拍摄图片</string>
    <string name="photo_clear">清除图片</string>
    <!-- 搜索 -->
    <string name="no_match_title">请更换关键词</string>
    <string name="no_match_category">找不到符合条件的类别</string>
    <string name="no_match_mistake">找不到符合条件的题目</string>
    <!-- 错题列表 -->
    <string name="do_you_know">您知道吗</string>
    <string name="tap_to_see_answer">请点错题卡片以查看答案</string>
    <string name="swipe_to_del">滑动卡片以删除错题</string>
    <string name="swipe_to_del_demo">现在请尝试滑动这张卡片</string>
    <!-- 删除 -->
    <string name="del_title">您确定要删除吗？</string>
    <string name="del_content">将删除题目相关数据且操作将不可逆转</string>

</resources>