<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="6dp"
                android:text="@string/tv_grade" />

            <Spinner
                android:id="@+id/spinner_grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp"
                android:text="@string/tv_subject" />

            <Spinner
                android:id="@+id/spinner_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp" />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/hint_title" >

        <requestFocus android:layout_width="wrap_content" />
    </EditText>

    <EditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/hint_description"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <View
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                style="@android:style/Widget.ActionButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@drawable/customized_button_background"
                android:clickable="true" >

                <Button
                    style="@android:style/Widget.ActionButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/add_photo"
                    android:clickable="false"
                    android:gravity="center"
                    android:textColor="@color/add"
                    android:textSize="25sp" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:background="@color/divider" />

            <LinearLayout
                style="@android:style/Widget.ActionButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@drawable/customized_button_background"
                android:clickable="true" >

                <Button
                    style="@android:style/Widget.ActionButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/add_tag"
                    android:clickable="false"
                    android:gravity="center"
                    android:textColor="@color/add"
                    android:textSize="25sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>